updated readme, fixed scrollbar issue

--- a/src/components/AppStyle.scss
+++ b/src/components/AppStyle.scss
@@ -8,5 +8,6 @@
   justify-content: center;
   align-items: center;
   transition: 1.3s;
+  overflow: hidden;
   background-color: $background-color;
 }
